src/styles/scss/NewsComparison.module.scss
.tot_container {
    display: flex;
    flex-flow: column wrap;
    overflow: hidden;
}

.flexbox_n {
    display: flex;
    flex-flow: column wrap;
    width: 100%;
}

.container {
    font-family: 'Libre Baskerville', sans, serif;
    font-weight: 700;
    font-size: 1.3rem;
    display: grid;
    grid-column-start: 1;
    grid-column-end: 2;
    grid-template-columns: 1fr 1fr;

    select { 
        max-height: 50px;
        overflow-y: scroll;
        border-radius: 50px;
        font-family: 'Libre Baskerville', sans, serif;
        margin-top: 3vh;
        
        &:nth-child(1) {
            margin-top: 5vh;
        }

        option {
            font-family: 'Libre Baskerville', sans, serif;
        }
    }
}

@keyframes fade_b_opac {
    from { transform: translateY(-50%); transform-origin: top; opacity: 0; }
    to { transform: translateY(0); opacity: 1; }
}

.mini_flex_selections {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    height: 5vh
}

.item {
    margin-left: 1vw;
    align-self: center;
    animation: fade_b_opac .5s 1;
}

@keyframes fade_lr_opac {
    from { transform: translateX(-50%); transform-origin: left; opacity: 0; }
    to { transform: translateX(0); opacity: 1; }
}

@keyframes fade_rl_opac {
    from { transform: translateX(50%); opacity: 0; }
    to { transform: translateX(0); opacity: 1; }
}

.filters_buttons {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    width: 60%;
    gap: .2em;

    button {
        flex: 1;
    }
}

.filters_container {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto auto auto auto;
    justify-items: start;
    gap: .5em;
    width: 70%;
    height: auto;
    margin: .5em auto 0 auto;
    background-color: rgba(240, 240, 240, 1);
    box-shadow: 4px 2px 8px rgba(210, 210, 210, 1);
    border-radius: 5px;
    font-family: 'Roboto', sans-serif;

    label { 
        color: rgb(100, 100, 100);
    }
}

.order_news {
    margin: .5em 0 0 1em;
}

.calendar {
    display: flex;
    flex-flow: row nowrap;
    gap: 1em;
    align-items: center;
    margin: .5em 0 0 1em;
}

.submission_buttons {
    position: relative;
    display: flex;
    flex-flow: row nowrap;
    gap: 2em;
    width: 50%;
    left: 42%;
    margin-top: .3em;
    flex-shrink: 2;

    button { 
        flex: 1;
    }
}

.ppp_select {
    display: flex;
    align-items: center;
    margin: .5em 0 0 1em;
}

.all_news_container {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    margin-top: 8vh;
    row-gap: 8vh;
    margin-bottom: 40px;


    &:nth-child(n + 10) {
        .item_flex {
            animation: fade_rl_opac .5s 1 !important;
        }
    }
    
    .item_flex {
        position: relative;
        width: 80%;
        height: 520px;
        animation: fade_lr_opac .5s 1;
        transition: all .4s ease-in;
        box-sizing: border-box;
        overflow: hidden;
        text-overflow: ellipsis;
        word-wrap: break-word;
        border-radius: 5px;

        &::before {
            content: "";
            position: absolute;
            left: 0;
            top: 0;
            width: 30%;
            height: 30%;
            border: 1.2px solid  #5C5248;
            border-bottom: none;
            border-right: none;
            border-top-left-radius: 5px;
            transition: all 1s ease-out;
        }

        &:nth-child(even)::before {
            border-width: 2px;
        }

        &:hover::before {
            content: "";
            width: 70%;
            height: 70%;
            border-width: 2px;
            transition: all 1s ease-out;
        }

        &:nth-child(even):hover::before {
            border-width: 1.2px;
        }


        &::after {
            content: "";
            position: absolute;
            right: 0;
            bottom: 0;
            width: 70%;
            height: 70%;
            border: 2px solid#5C5248;
            border-top: none;
            border-left: none;
            border-bottom-right-radius: 5px;
            transition: all 1s ease-out;
        }

        &:nth-child(even)::after {
            border-width: 1.2px;
        }

        &:hover::after {
            content: "";
            width: 30%;
            height: 30%;
            border-width: 1.2px;
            transition: all 1s ease-out;
        }

        &:nth-child(even):hover::after {
            border-width: 2px;
        }


        
        &:hover {
            transform: scale(1.1);
            border-color: #949398FF;
            border-width: 1.5px;
            background-color: rgba(230, 230, 230, 1);
            border-top-right-radius: 70px 60px;
            box-shadow: -2px -2px 15px -2px rgba(70, 70, 70, 1);
            transition: all .7s ease-out;
        }
    }

    .date_creation {
        position: relative;
        text-align: right;
        font-size: .45rem;
        font-weight: normal;
        opacity: .4;
    }

    @keyframes opacity {
        from { opacity: 0; }
        to { opacity: 1; }
    }

    .image { 
        animation: opacity 1s 1;

        img {
            border-radius: 2px !important;
        }

    }

    .headline {
        font-size: 1rem;
        cursor: default;
        width: 90%;
        margin: .3em auto;
        overflow: hidden;
        text-overflow: ellipsis;
        font-family: 'Libre Baskerville', sans-serif;
    }

    .intro_paragraph {
        position: relative;
        font-weight: normal;
        width: 90%;
        margin: 0 auto;
        text-align: justify;
        text-justify: inter-word;
        font-family: 'Libre Baskerville', sans-serif;
        font-size: clamp(.6rem, .8rem, 1.2rem);
        overflow: hidden;
        text-overflow: ellipsis
    }
}
/* ... */

